try to fix containers tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,6 +69,8 @@ jobs:
           docker pull docker.io/library/docker:26-dind-rootless
           docker pull docker.io/library/docker:27-dind-rootless
           docker pull docker.io/library/docker:28-dind-rootless
+          docker pull alpine:latest
+          docker save --output test/fixtures/alpine_latest.tar alpine:latest
 
       - if: startsWith(matrix.config.variant, 'node')
         uses: ./.github/actions/setup-node
