--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "the-moby-effect",
-    "version": "1.51.2",
+    "version": "1.51.3",
     "description": "Moby/Docker API client built using effect-ts",
     "keywords": [
         "moby",
@@ -141,8 +141,8 @@
         "access": "public",
         "exports": {
             "./package.json": "./package.json",
-            ".": "./dist/index.ts",
-            "./*": "./dist/*.ts",
+            ".": "./dist/index.js",
+            "./*": "./dist/*.js",
             "./internal/*": null
         }
     },
